# go-toolbox

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.alpine  Dockerfile.debian  README.md  Taskfile.yml
.github/workflows/: ci.yml  scheduled-build.yml
example/: Taskfile.yml
example/cmd/: root.go
example/internal/api/: api.go
examples/: README.md
examples/go/: README.md  go.mod  main.go
examples/go/cmd/: root.go
examples/python/: Dockerfile  README.md  Taskfile.yml  main.py
examples/rust/: Cargo.toml  Dockerfile  README.md  Taskfile.yml
examples/rust/src/: main.rs
examples/typescript/: Dockerfile  README.md  Taskfile.yml  package.json
examples/typescript/src/: index.ts
scripts/: taggen.sh
scripts/taggen/: taggen.go
