[package]
name = "mjolnir-example"
version = "0.1.0"
edition = "2021"
description = "Mjolnir Example API - Rust"
authors = ["inovacc"]

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
